Fix gap etc

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1, h2, h3, p, a, ol {font-family: 'cairo';}
 h1 {font-size: 3.5vw; font-weight: 700; color: white;}
 h2 {font-size: 2.25vw; font-weight: 600; color: white;}
 h3 {font-size: 1.75vw; font-weight: 600; color: white;}
-p, a, ol {font-size: 1.25vw; font-weight: 500; color: white; text-align: justify;}
+p, a, ol {font-size: 1.25vw; font-weight: 500; color: white;}
 
 .carousel-caption h5 {
     font-size: 1vw;
@@ -156,7 +156,7 @@ p, a, ol {font-size: 1.25vw; font-weight: 500; color: white; text-align: justify
     h1 {font-size: 9vw; font-weight: 700; color: white;}
     h2 {font-size: 5vw; font-weight: 600; color: white;}
     h3 {font-size: 4vw; font-weight: 600; color: white;}
-    p, a {font-size: 2.75vw; font-weight: 500; color: white; text-align: justify;}
+    p, a, ol {font-size: 2.75vw; font-weight: 500; color: white;}
     
     .section-greetings-container {
         height: max-content;
